--- a/department-service.properties
+++ b/department-service.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=B.vinay@7
  
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
